Fix sidedock panel overflow

--- a/src/app/sidedock.scss
+++ b/src/app/sidedock.scss
@@ -52,7 +52,8 @@ body:not(.is-mobile) {
 
     .workspace-tab-container,
     .workspace-leaf,
-    .workspace-leaf-content {
+    .workspace-leaf-content,
+    .workspace-leaf-content > .view-content {
       overflow: visible !important;
     }
   }
